Refactor server setup with downloader & version fetcher.
Added modularized server setup components including `Downloader`, `VersionFetcher`, and server version mappings. Integrated support for Paper, Velocity, Purpur, and Spigot APIs with progress tracking and error handling. Updated build dependencies to include serialization, Ktor client, and coroutines for API communication.